--- a/components/dogPreview/style.module.css
+++ b/components/dogPreview/style.module.css
@@ -1,42 +1,60 @@
 .preview {
-  display: flex;
-  height: 100%;
-  box-sizing: border-box;
+  position: relative; 
+  display: inline-block;
+  vertical-align: top;
   text-align: center;
   border: 1px solid #666;
   padding: 10px 4px;
   border-radius: 4px;
   cursor: pointer;
-  transition: color 200ms;
+  transition: color 200ms, box-shadow 200ms;
   color: var(--text);
   box-sizing: border-box;
   perspective: 800px;
+  box-shadow: 0 0.25em 0.5em rgba(0, 0, 0, 0.25);
+  background: linear-gradient(to bottom, #fff 0%, #eee 100%);
 }
 
+.preview::after { 
+  content: "Sniff"; 
+  position: absolute;
+  top: 0.5em;
+  right: 0.5em;
+  padding: 0.25em 0.5em;
+  border-radius: 0.25em;
+  background-color: #007bff;
+  color: #fff;
+  font-size: 0.75em;
+  text-transform: uppercase;
+}
+
+
 .preview p {
-  text-decoration: none;
-  padding: 0;
-  margin: 0;
+  width: 100%;
+  padding: 5px;
+  text-align: center;
+  font-size: 25px;
 }
 
 .preview img {
-  height: 100%;
+  display: inline-block;
+  vertical-align: top;
+  max-width: 80%;
+  max-height: 80%;
+  padding: 5px;
+  object-fit: cover;
 }
-
-/* .preview img {
-  transition: 500ms ease;
-  box-shadow: 4px 4px 8px #666;
-  transform: rotateY(10deg);
-  margin-bottom: 5px;
-} */
 
 .preview:hover {
   color: var(--primary);
   border-color: var(--primary);
   text-decoration: underline;
+  box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.25);
+  background: linear-gradient(to bottom, #d4b7d9 0%, #a898ab 100%);
 }
-/* 
-.preview:hover img {
-  box-shadow: 2px 2px 12px #888;
-  transform: rotateY(0deg) translateZ(20px);
-} */
+
+.preview:hover::after {
+  background-color: #fff;
+  color: #007bff;
+  border: 1px solid #007bff;
+}
