--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  padding: 2rem;
 }
 
 .description {
@@ -16,14 +18,21 @@
   border: 1px solid #eaeaea;
   border-radius: 10px;
   max-width: 350px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.card h2 {
+  font-size: 1.8rem;
+  font-weight: 600;
 }
 
 .form {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 1rem;
 }
 
 .form > * {
-  margin-bottom: 10px;
+  margin-bottom: 1rem;
 }
